# GeneForgeLang

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  ADVANCED_SYNTAX_IMPLEMENTATION_SUMMARY.md  ANNOUNCEMENT.md  CHANGELOG.md  CITATION.cff  COLLABORATION_PROPOSAL_GFL_GF.md  CONSTITUTION.md  CONTRIBUTING.MD  Dockerfile  ENHANCED_INFERENCE_SUMMARY.md  FINAL_RESPONSE_TO_JESKO.md  FINAL_REVIEW_RESPONSE.md  FINAL_REVIEW_RESPONSE_SUMMARY.md  GF-166_QA_FINAL_REPORT.md  GF-166_QA_PLAN.md  Grammar.md  IO_CONTRACTS_IMPLEMENTATION_SUMMARY.md  JOSS_ISSUES_RESOLVED.md  JOSS_REVIEWER_RESPONSE.md  MIGRATION_NOTES.md  Makefile  PHASE_2_SUMMARY.md  PROFESSIONALIZATION_COMPLETE.md  PROFESSIONALIZATION_PLAN.md  PROTOCOL.md  README.md  README_PROFESSIONAL.md  README_geneAI.md  RELEASE_v2.0_BETA_ANNOUNCEMENT.md  REPOSITORY_COHERENCE_ANALYSIS.md  REPOSITORY_ORGANIZATION.md  RESPONSE_TO_JESKO.md  REVIEWER_RESPONSE.md  SCHEMA_REGISTRY_IMPLEMENTATION_SUMMARY.md  SECURITY_ADVISORY.md  SECURITY_SUMMARY.md  (+119 more)
.devcontainer/: .env  Dockerfile  README.md  devcontainer.json  docker-compose.yml  initialize.bat  initialize.sh  run-tests.bat  run-tests.sh  settings.json  setup.bat  setup.sh  verify-setup.bat  verify-setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
api/: main.py
applications/: app_gradio_full_graph.py  gfl_translator_app.py  launch_pipeline.py
bench/: coverage.py  test_corpus.py
cases/: KJ_CRISPR2.yaml  KJ_CRISPR2_GFL_case.md  ontology.md
conformance_suite/: README.md
cookiecutter-gfl-plugin/: cookiecutter.json  example_usage.md
cookiecutter-gfl-plugin/{{ cookiecutter.plugin_name }}/: README.md  pyproject.toml
cookiecutter-gfl-plugin/{{ cookiecutter.plugin_name }}/{{ cookiecutter.module_name }}/: __init__.py  plugin.py
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_EXPORT_GUIDE.md  Enhancer_Module_Spec.md  LLM_GFL_Fundamental_Principle.md  PHASE_3_PLUGIN_ECOSYSTEM_SUMMARY.md  PHASE_4_PLANNING.md  PLUGIN_ECOSYSTEM.md  PULL_REQUEST_DESCRIPTION.md  SECURITY_ADVISORY.md  WEB_API_IMPLEMENTATION_SUMMARY.md  architecture.md  container_execution.md  gfl_benchmark_tasks.md  index.md  protein_foundation_extension.md  reasoning.md  spatial_genomic_capabilities.md
examples/: README.md  container_execution_example.gfl  enhanced_inference_demo.py  epigenetic_crispoff_vegfa_silencing.gfl  example1.gfl  example2.gfl  example_crispr_optimization.gfl  example_implementations.py  example_protein_design.gfl  gfl_example.gfl  gfl_examples.gfl  gfl_training_data.txt  locityper_hla_genotyping.gfl  multi_omic_example.gfl  run_axiom_demo.py  simple_workflow.gfl  spatial_genomic_complex_example.gfl  test_editing.gfl  test_invalid_semantics.gfl  test_multi_editing.gfl  test_spatial_genomic.py  test_valid_semantics.gfl  web_api_integration_demo.py  workflow_example.py
external_integrations/: README.md
gfl/: __init__.py  adaptive_reasoner.py  api.py  api_server.py  axiom_hooks.py  capability_system.py  cli.py  cli_inference.py  cli_main.py  cli_utils.py  client_sdk.py  container_executor.py  enhanced_cli.py  enhanced_inference_engine.py  enhanced_schema_validator.py  error_handling.py  evaluator.py  execution_engine.py  gfl_example.gfl  grammar.md  grammar_parser.py  grammar_syntax.md  inference_engine.py  interpreter.py  lexer.py  manual_and_examples.md  parser.out  parser.py  parser_rules.py  parsetab.py  performance.py  prob_rules.py  requirements.txt  schema_loader.py  schema_validator.py  semantic_validator.py  server_launcher.py  temp_lexer.py  test_lexer.py  translate_lstm.py  (+4 more)
gfl-plugin-rag-engine/: .coveragerc  LICENSE  MANIFEST.in  README.md  batch_validation.gfl  example_workflow.gfl  guided_discovery_with_rag.gfl  pyproject.toml  pytest.ini  run_tests.sh
gfl-plugin-rag-engine/.github/: CICD_GUIDE.md  PULL_REQUEST_TEMPLATE.md
gfl-plugin-rag-engine/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
gfl-plugin-rag-engine/.github/workflows/: ci.yml  release.yml
gfl-plugin-rag-engine/gfl_plugin_rag_engine/: __init__.py  plugin.py
gfl-plugin-rag-engine/tests/: README.md  __init__.py  conftest.py  test_gfl_parser_integration.py  test_plugin_interface.py  test_pubmed_retrieval.py  test_reasoning_and_scoring.py
gfl_lsp/: README.md  test_example.gfl
gfl_sdk/: __init__.py  geneforge_grammar.json  parser.py
incoming_transfer/: data_staging_manager.py  demo_data_staging.py  test_data_staging.py
roadmap_phase_3/: .gitignore  GFL_GENESIS_PROJECT_PLAN.md  PHASE_3_INITIATIVES.md  README_reasoning_driven.md  analyze_long_peaks.py  download_datasets.py  download_real_datasets.py  geneforge_grammar.json  geneforge_grammar_v2.json  merged_peaks_report.txt  process_datasets.py  summarize_peaks.py  syntax.md  syntax_extended.md  syntax_v2.md
schema/: gfl.schema.json  gfl_semantic_invariants.schema.json
scripts/: architectural_audit.py  check_plugins.py  clean_requirements.py  export_ast.py  fix_and_demo.py  generate_gfl_data.py  gfl_to_vcf.py  gfl_translator_app.py  patch_lexer_quotes.py  pre_release_check.py  release.ps1  release.sh  train_gfl_model.py  update_requirements.py  verify_bio_skills.py
sdk_python/: __init__.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
src/gfl_lsp/: README.md  pyproject.toml  test_example.gfl
src/gfl_lsp/gfl_lsp/server/: __init__.py  main.py
tests/: comprehensive_test.py  conftest.py  execute_test.py  simple_test.py  test_advanced_validation.py  test_api.py  test_basic_functionality.py  test_basic_plugin_functionality.py  test_bio_skills.py  test_bridge_plugin.py  test_capability_validator.py  test_complete_workflow.py  test_conformance_suite_v1_3_0.py  test_container_execution.py  test_data_staging.py  test_data_staging_integration.py  test_design_file.py  test_design_implementation.py  test_design_schema.py  test_enhanced_inference_engine.py  test_enhanced_inference_standalone.py  test_example_optimize.py  test_examples_roundtrip.py  test_grammar.py  test_io_contracts.py  test_multi_omic_v2_0.py  test_new_features.py  test_optimize_implementation.py  test_platform.py  (+11 more)
(+963 files in other folders)
