[project]
name = "{{ cookiecutter.plugin_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
requires-python = ">=3.9"
dependencies = [
    "geneforgelang>=1.0.0",
    # Los plugins pueden tener dependencias a librerías científicas
    # "pandas>=2.0.0",
    # "numpy>=1.24.0",
    # "scikit-learn>=1.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["{{ cookiecutter.module_name }}*"]

[tool.setuptools.package-data]
{{ cookiecutter.module_name }} = ["py.typed", "*.json", "*.yaml", "*.yml"]
